# teleoperation_ws

./: .gitignore
src/haptic_connect/: CMakeLists.txt  package.xml
src/haptic_connect/launch/: UGV_simulation.launch.py  dynamic_pose.launch.py  right_pos.launch.py
src/haptic_connect/src/: FTsensor.cpp  Haptic_init.cpp  Haptic_init2.cpp  Haptic_init_UGV.cpp  Haptic_pos.cpp  Haptic_pose_UGV.cpp  dynamic_pose.cpp  end_eff_pose_left_right.cpp  end_effpose.cpp  endeff_pose_UGV.cpp  external_force.cpp  gripper_sub.cpp  left_pos_tracking.cpp  left_right_gripper.cpp  no_haptics.cpp  normal_pose_tracking.cpp  pose_tracking_leftrobotUGV.cpp  pose_tracking_rightrobotUGV.cpp  right_pos_tracking.cpp
src/mt_interfaces/: CMakeLists.txt  README.md  package.xml
src/mt_interfaces/msg/: CartesianCoordinateArray.msg  Drive.msg  Gripper.msg  HapticArmsPoses.msg  MotorState.msg  Pulse.msg  Radar.msg  RobotArmPoses.msg  StatusMessage.msg  ThermalImage.msg
src/mt_interfaces/srv/: Latency.srv  SetMode.srv  SetUInt8.srv
src/robot_config/: CMakeLists.txt  package.xml
src/robot_config/config/: Dressing_robot.urdf  Dressing_robot_simulation.urdf  UGV_simulation_controller.yaml  dressing_robot.srdf  dressing_robot_controller.yaml  kinematics.yaml  left_joint_limits.yaml  left_moveit_controllers.yaml  left_panda_simulated_config_pose_tracking.yaml  left_pose_tracking_settings.yaml  moveit_config.rviz  right_joint_limits.yaml  right_moveit_controllers.yaml  right_panda_simulated_config_pose_tracking.yaml  right_pose_tracking_settings.yaml  ugv_system.urdf  ugv_system_single.srdf
src/robot_config/meshes/: 2FGripper.stl  2FGripper_Finger.stl  2FGripper_Sensorpack.stl  3fg_1.stl  3fg_2.stl  3fg_Camera.stl  mannequin1.dae  mannequin2.stl  new_ugv.stl  small_cam_hand.stl
